<?xml version="1.0" encoding="utf-8"?>
<GridLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_customer_id"
        android:layout_column="0"
        android:layout_row="0"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:text=""
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_customer_name"
        android:layout_column="0"
        android:layout_row="1"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        />
    <Button
        android:text="@string/btnQuery"
        />

    <ScrollView
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <GridLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:columnCount="4">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="客戶編號"
            
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="客戶名稱"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="性別"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="生日"
                />

        </GridLayout>
    </ScrollView>
</GridLayout >